--- a/wx_xcx/project.config.json
+++ b/wx_xcx/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.98",
 	"appid": "touristappid",
-	"projectname": "wx_xcx",
+	"projectname": "wx_test",
 	"condition": {
 		"search": {
 			"current": -1,
