自定义组件-dialog

--- a/wx_xcx/app.json
+++ b/wx_xcx/app.json
@@ -3,6 +3,7 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/test/test",
+    "pages/customcomp/customcomp",
     "pages/weather/weather",
     "pages/xsc/xsc"
   ],
